--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="wrapper-select">
-      <select name="cats" class="breed-select" id="single"></select>
+      <select name="cats" class="breed-select is-hidden" id="single"></select>
       <span class="loader"></span>
       <p class="error">Oops! Something went wrong! Try reloading the page!</p>
       
